base set up profile integration